# YT_automated_video_upload

./: .gitignore  CREDENTIALS_SETUP.md  METADATA_GUIDE.md  QUICK_REFERENCE.txt  README.md  TEMPLATE_metadata.json  TEMPLATE_metadata.txt  YT_automation.bat  config.json.example  pyproject.toml  upload_queue.xlsx
youtube_auto_upload_automation/: __init__.py  config.py  file_monitor.py  main.py  metadata_handler.py  tag_generator.py  youtube_uploader.py
